--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,5 @@ permalink: pretty
 # ----------------------- #
 
 social:
-#  - title: twitter
-#    url: https://twitter.com/SBootstrap
-#  - title: github
-#    url: https://github.com/IronSummitMedia/startbootstrap
-#  - title: linkedin
-#    url: 
+  - title: email
+    url: mailto:contactus@xnor-labs.com
